Added examples with scale and slide right and scale

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,6 +10,8 @@
         <item>Slide right</item>
         <item>Slide top</item>
         <item>Slide bottom</item>
+        <item>Scale</item>
+        <item>Slide right and Scale</item>
     </string-array>
 
 </resources>
